# finch

./: .gitignore  Cargo.toml  README.md  build.rs  crates.nix  flake.nix
.github/workflows/: rust.yml
crates/finch-root/: Cargo.toml  build.rs
crates/finch-root/src/: client.rs
crates/spark/spark-submit/: Cargo.toml
crates/spark/spark-submit/src/: lib.rs
src/: client.rs  lib.rs  main.rs  server.rs
