[package]
name = "finch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.11.0"
prost = "0.12.6"
tokio = { version = "1.38.0", features = ["tracing", "full"] }

[build-dependencies]
tonic-build = "0.11.0"
