[package]
name = "finch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.12.1"
prost = "0.13.1"
tokio = { version = "1.39.1", features = ["tracing", "full"] }

[build-dependencies]
tonic-build = "0.12.1"
