[package]
name = "finch"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "helloworld-server"
path = "src/server.rs"

[[bin]]
name = "helloworld-client"
path = "src/client.rs"

[dependencies]
tonic = "0.12"
prost = "0.13"
tokio = { version = "1.42", features = ["tracing", "full"] }
sqlx = { version = "0.8", default-features = false, features = ["macros", "runtime-tokio", "tls-rustls", "postgres"] }

[build-dependencies]
tonic-build = "0.12"
